# pwb-toolbox

./: .gitignore  LICENSE.txt  README.md  pylint  requirements.txt  setup.cfg
 server/: README.md
 server/ib/: execute.py  ib_launcher.py
data/: nasdaq-stocks.raw.csv  nasdaq-stocks.title.csv  stocks.csv  stocks.title.csv
data_legacy/: stocks.csv  stocks.raw.csv
docs/: backtesting.md  datasets.md  execution.md
pwb_backtest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pwb_toolbox/backtest/: __init__.py  alpha.py  backtest_engine.py  base_strategy.py  commission.py  engine.py  example.py  execution.py  ib_connector.py  indicators.py  insight.py  portfolio.py  risk.py  strategies.py  universe.py
pwb_toolbox/backtesting/: __init__.py  backtest_engine.py  commission.py  optimization_engine.py  portfolio.py  universe.py
pwb_toolbox/datasets/: __init__.py
pwb_toolbox/execution/: __init__.py  broker_factory.py  ccxt_connector.py  ib_connector.py  live_utils.py  optimal_limit_order.py  transaction_cost.py
pwb_toolbox/features/: __main__.py
pwb_toolbox/models/: momentum.py
pwb_toolbox/performance/: __init__.py  metrics.py  nav_metrics.py  plots.py  reports.py  trade_stats.py
pwb_toolbox/strategies/: momentum.py
pwb_toolbox/strategy_ideas/: __main__.py
pwb_toolbox_legacy/datasets/: __init__.py
pwb_toolbox_legacy/features/: __main__.py
pwb_toolbox_legacy/strategies/: momentum.py
pwb_toolbox_legacy/strategy_ideas/: __main__.py  ssrn_abstract_crawler.py  ssrn_paper.py  ssrn_paper_crawler.py  ssrn_paper_summarizer.py
server/: install.sh
server/airflow/: airflow.cfg
systematic_trading/: __init__.py  helpers.py
tests/: stubs.py  test_backtest.py  test_execution_models.py  test_hf_token.py  test_ib_connector.py  test_portfolio_models.py  test_risk_models.py  test_universe_models.py
tools/: README.md
(+512 files in other folders)
