[metadata]
name = pwb-toolbox
version = 0.1.5
author = Your Name
author_email = hello@paperswithbacktest.com
description = A toolbox library for quant traders
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paperswithbacktest/pwb-toolbox
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    datasets
    pandas