[metadata]
name = pwb-toolbox
version = 0.1.11
author = Your Name
author_email = hello@paperswithbacktest.com
description = A toolbox library for quant traders
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paperswithbacktest/pwb-toolbox
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    datasets
    pandas
    ibapi
    ib_insync
